# AI-Workflow-Pipeline

./: .env.example  .gitignore  PROJECT_COMPLETE_GUIDE.md  README.md  USER_GUIDE.md  plan2.md  pyproject.toml  requirements.txt  sample.txt  start_server.bat  start_server.py
docker/: pytest-runner.Dockerfile
docs/: SKILLS_AND_REFERENCES.md
scripts/: list_output.py  start_web.py
src/orchestrator/: config.py  exceptions.py  logging_config.py  main.py  scaffold_templates.py
src/orchestrator/agents/: base.py  coder.py  planning_agent.py  planning_events.py  planning_models.py  planning_prompt.py  planning_service.py  planning_state.py  planning_workflow.py  reviewer.py  tester.py  validator.py
src/orchestrator/cli/: console.py
src/orchestrator/core/: context.py  guardrails.py  metrics.py  scaffold.py  workflow.py
src/orchestrator/llm/: __init__.py  __init__.py,cover  base.py  base.py,cover  cost_tracker.py  cost_tracker.py,cover  factory.py  (+3 more)
test_artifacts/: test_llm_fix_log.txt  test_run_log.txt  us_001_detailed_test_run.txt  us_001_llm_integration_test_report.md  us_008_scaffold_test_report.md  us_008_scaffold_test_run.txt
tests/: conftest.py  sample.txt
tests/agents/: test_agent_fixes.py  test_coder_agent.py
tests/core/: test_exceptions.py  test_guardrails.py  test_metrics.py  test_pipeline.py  test_system.py
tests/llm/: test_llm_layer.py
tests/tools/: test_file_manager.py  test_scaffold.py  test_scaffold_templates.py  test_workspace.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
(+33 files in other folders)
